Job and Salary entities are added